# SlicerAnimator

./: CMakeLists.txt  README.md
Animator/: Animator.py  CMakeLists.txt
